<resources>
    <string name="app_name">WeatherChekk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">E-mail</string>
    <string name="maps">Maps</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="facebook">Facebook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">Linkedin</string>
    <string name="submit">Submit</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="enter_city">Enter City:</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="cities">Windsor</string>
    <string name="temp">-1 ℃</string>
    <string name="low">L-7 ℃</string>
    <string name="high">H-4℃</string>
    <string name="desc">Description \nCloudy</string>
    <string name="pressure">Pressure \n1019</string>
    <string name="wind">Wind \nNW 6Km/hr</string>
    <string name="visibility">Visiblity \n16 Km</string>
    <string name="humid">Humidity \n0%</string>
    <string name="feelslike">Feels Like \n2.2℃</string>
</resources>