<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".contact">

    <Button
        android:id="@+id/facebook"
        android:layout_width="129dp"
        android:layout_height="80dp"
        android:drawableTop="@drawable/facebook"
        android:paddingTop="10dp"
        android:text="@string/facebook"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186" />

    <Button
        android:id="@+id/instagram"
        android:layout_width="126dp"
        android:layout_height="77dp"
        android:layout_marginStart="73dp"
        android:drawableTop="@drawable/instagram"
        android:paddingTop="10dp"
        android:text="@string/instagram"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/facebook"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186" />

    <Button
        android:id="@+id/linkedin"
        android:layout_width="126dp"
        android:layout_height="77dp"
        android:drawableTop="@drawable/linkedin"
        android:paddingTop="10dp"
        android:text="@string/linkedin"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/website"
        android:layout_width="126dp"
        android:layout_height="77dp"
        android:drawableTop="@drawable/ic_baseline_public_24"
        android:paddingTop="10dp"
        android:text="@string/website"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instagram"
        app:layout_constraintVertical_bias="0.103" />

</androidx.constraintlayout.widget.ConstraintLayout>